--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Alimentos transgenicos</title>
+        <title>Evolucion de las computadoras</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -44,19 +44,11 @@
         <section class="page-section clearfix">
             <div class="container">
                 <div class="intro">
-                    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/evolucion-computadora.png" alt="..." />
-                    <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-                        <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">evolucion de las computadoras</span>
-                            <span class="section-heading-lower">evolucion</span>
-                        </h2>
-                        <p class="mb-3">La evolución de las computadoras es un tema fascinante que ha transformado radicalmente la forma en que vivimos, trabajamos y nos comunicamos. A lo largo de las décadas, las computadoras han experimentado avances significativos en términos de capacidad de procesamiento, tamaño, funcionalidad y accesibilidadLa evolución de las computadoras es un tema fascinante que ha transformado radicalmente la forma en que vivimos, trabajamos y nos comunicamos. A lo largo de las décadas, las computadoras han experimentado avances significativos en términos de capacidad de procesamiento, tamaño, funcionalidad y accesibilidad.</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="##00b4f5!">Mira su evolucion!</a></div>
-                    </div>
+              
                 </div>
             </div>
         </section>
-        <section class="page-section cta">
+        <section class="page-section ">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-9 mx-auto">
@@ -72,7 +64,7 @@
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Frutas GM 2023</p></div>
+            <div class="container"><p class="m-0 small">evolucion de las computadoras 2023</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
